Unify methods `get`, `set`, and `update` to handle contents `{ json, text }`

--- a/examples/browser/json_schema_validation.html
+++ b/examples/browser/json_schema_validation.html
@@ -130,7 +130,7 @@
     target: document.getElementById('jsoneditor'),
     props: {
       json,
-      onChangeJson: doc => console.log('onChangeJson', doc),
+      onChange: update => console.log('onChange', update),
       validator: createAjvValidator(schema, schemaRefs)
     }
   })
