--- a/examples/browser/basic_usage_umd.html
+++ b/examples/browser/basic_usage_umd.html
@@ -38,13 +38,16 @@
       'time': 1575599819000,
       'string': 'Hello World'
     }
-    editor.set(json)
+    const content = {
+      json
+    }
+    editor.set(content)
   }
 
   // get json
   document.getElementById('getJSON').onclick = function () {
-    const json = editor.get()
-    alert(JSON.stringify(json, null, 2))
+    const content = editor.get()
+    alert(JSON.stringify(content, null, 2))
   }
 </script>
 </body>
