Implement welcome mode to handle a new, empty document

--- a/tools/develop-vanilla.html
+++ b/tools/develop-vanilla.html
@@ -197,7 +197,7 @@
   }
 
   document.getElementById('clearJson').onclick = function handleClearJson() {
-    testEditor.set({})
+    testEditor.setText('')
   }
 
   document.getElementById('patchJson').onclick = function handleClearJson() {
