fix: some fixes in ensuring a selection in case of an empty document

--- a/tools/develop-vanilla.html
+++ b/tools/develop-vanilla.html
@@ -135,7 +135,7 @@
 
   const target = document.getElementById('testEditorContainer')
   const props = {
-    // json,
+    json,
     onChange: ({ json, text }) => console.log('onChange', { json, text }),
     onChangeMode: (mode) => console.log('onChangeMode', mode),
     onFocus: () => console.log('got focus...'),
