--- a/examples/browser/toggle_options.html
+++ b/examples/browser/toggle_options.html
@@ -30,20 +30,25 @@
     <script type="module">
       import { JSONEditor } from '../../package/dist/jsoneditor.js'
 
+      const content = {
+        text: undefined,
+        json: {
+          array: [1, 2, 3],
+          boolean: true,
+          color: '#82b92c',
+          null: null,
+          number: 123,
+          object: { a: 'b', c: 'd' },
+          time: 1575599819000,
+          string: 'Hello World'
+        }
+      }
+
       // create the editor
       const editor = new JSONEditor({
         target: document.getElementById('jsoneditor'),
         props: {
-          json: {
-            array: [1, 2, 3],
-            boolean: true,
-            color: '#82b92c',
-            null: null,
-            number: 123,
-            object: { a: 'b', c: 'd' },
-            time: 1575599819000,
-            string: 'Hello World'
-          }
+          content
         }
       })
 
