--- a/examples/browser/basic_usage.html
+++ b/examples/browser/basic_usage.html
@@ -14,8 +14,8 @@
   </head>
   <body>
     <p>
-      <button id="setJSON">Set JSON</button>
-      <button id="getJSON">Get JSON</button>
+      <button id="setContent">Set content</button>
+      <button id="getContent">Get content</button>
     </p>
     <div id="jsoneditor"></div>
 
@@ -28,24 +28,28 @@
       })
 
       // set json
-      document.getElementById('setJSON').onclick = function () {
-        const json = {
-          array: [1, 2, 3],
-          boolean: true,
-          color: '#82b92c',
-          null: null,
-          number: 123,
-          object: { a: 'b', c: 'd' },
-          time: 1575599819000,
-          string: 'Hello World'
+      document.getElementById('setContent').onclick = function () {
+        const content = {
+          text: undefined, // used in code mode
+          json: {
+            array: [1, 2, 3],
+            boolean: true,
+            color: '#82b92c',
+            null: null,
+            number: 123,
+            object: { a: 'b', c: 'd' },
+            time: 1575599819000,
+            string: 'Hello World'
+          }
         }
-        editor.set(json)
+
+        editor.set(content)
       }
 
       // get json
-      document.getElementById('getJSON').onclick = function () {
-        const json = editor.get()
-        alert(JSON.stringify(json, null, 2))
+      document.getElementById('getContent').onclick = function () {
+        const content = editor.get()
+        alert(JSON.stringify(content, null, 2))
       }
     </script>
   </body>
