feat: give all css class names a `jse-` prefix

--- a/tools/develop-vanilla.html
+++ b/tools/develop-vanilla.html
@@ -43,11 +43,11 @@
         max-width: 100%;
       }
 
-      .json-node.custom-class-highlight {
+      .jse-json-node.custom-class-highlight {
         background: greenyellow;
       }
 
-      .json-node.custom-class-boolean .value {
+      .jse-json-node.custom-class-boolean .jse-value {
         background: pink;
       }
     </style>
