feat: rename 'code' mode to 'text' mode
BREAKING CHANGE:

The 'code' mode has been renamed to 'text' mode.

--- a/examples/browser/basic_usage.html
+++ b/examples/browser/basic_usage.html
@@ -30,7 +30,7 @@
       // set json
       document.getElementById('setContent').onclick = function () {
         const content = {
-          text: undefined, // used in code mode
+          text: undefined, // used in text mode
           json: {
             array: [1, 2, 3],
             boolean: true,
