chore: fix examples, update readme

--- a/examples/browser/basic_usage.html
+++ b/examples/browser/basic_usage.html
@@ -20,7 +20,7 @@
     <div id="jsoneditor"></div>
 
     <script type="module">
-      import { JSONEditor } from '../../package-vanilla/jsoneditor.js'
+      import { JSONEditor } from '../../package-vanilla/index.js'
 
       // create the editor
       const editor = new JSONEditor({
