--- a/examples/browser/json_schema_validation.html
+++ b/examples/browser/json_schema_validation.html
@@ -36,7 +36,7 @@
     <div id="jsoneditor"></div>
 
     <script type="module">
-      import { JSONEditor, createAjvValidator } from '../../package-vanilla/jsoneditor.js'
+      import { JSONEditor, createAjvValidator } from '../../package-vanilla/index.js'
 
       const schema = {
         title: 'Employee',
