--- a/tools/develop-vanilla.html
+++ b/tools/develop-vanilla.html
@@ -106,7 +106,7 @@
         JSONEditor,
         lodashQueryLanguage,
         jmespathQueryLanguage
-      } from '../package-vanilla/jsoneditor.js'
+      } from '../package-vanilla/index.js'
 
       const json = {
         array: [
