feat: implement `onCreateAjv` callback for the `createAjvValidator` plugin
BREAKING CHANGE:

The signature of `createAjvValidator` is changed from up to three unnamed arguments
`createAjvValidator(schema, schemaDefinitions, ajvOptions)` to a single object with options
`createAjvValidator({ schema, schemaDefinitions, ajvOptions })`.

--- a/examples/browser/json_schema_validation.html
+++ b/examples/browser/json_schema_validation.html
@@ -127,7 +127,7 @@
         props: {
           content,
           onChange: (update) => console.log('onChange', update),
-          validator: createAjvValidator(schema, schemaDefinitions)
+          validator: createAjvValidator({ schema, schemaDefinitions })
         }
       })
     </script>
