fix: `onChange` event not fired after calling `editor.set(...)` (see #318)

--- a/tools/develop-vanilla.html
+++ b/tools/develop-vanilla.html
@@ -384,8 +384,7 @@
           updated: ':)'
         }
         const str = JSON.stringify(updatedJson, null, 2)
-        const index = str.lastIndexOf('}')
-        const invalidStr = str.slice(0, index) + ']' + str.slice(index + 1)
+        const invalidStr = str + '['
         testEditor.update({ text: invalidStr })
       }
 
