feat: export a bundle with and one without external dependencies
BREAKING CHANGE:

When using `vanilla-jsoneditor` directly in the browser,
you now have to `import { JSONEditor } from 'vanilla-jsoneditor/standalone.js'`.

--- a/examples/browser/custom_theme_color.html
+++ b/examples/browser/custom_theme_color.html
@@ -27,7 +27,7 @@
     <div id="my-jsoneditor"></div>
 
     <script type="module">
-      import { JSONEditor } from '../../package-vanilla/index.js'
+      import { JSONEditor } from '../../package-vanilla/standalone.js'
 
       const editor = new JSONEditor({
         target: document.getElementById('my-jsoneditor'),
