--- a/examples/browser/toggle_options.html
+++ b/examples/browser/toggle_options.html
@@ -28,7 +28,7 @@
     <div id="jsoneditor"></div>
 
     <script type="module">
-      import { JSONEditor } from '../../package-vanilla/index.js'
+      import { JSONEditor } from '../../package-vanilla/standalone.js'
 
       const content = {
         text: undefined,
