--- a/tools/develop-vanilla.html
+++ b/tools/develop-vanilla.html
@@ -107,7 +107,7 @@
         JSONEditor,
         lodashQueryLanguage,
         jmespathQueryLanguage
-      } from '../package-vanilla/index.js'
+      } from '../package-vanilla/standalone.js'
 
       const json = {
         array: [
