fix: editor not getting focus when clicking in an empty area in table mode

--- a/tools/develop-vanilla.html
+++ b/tools/develop-vanilla.html
@@ -50,6 +50,10 @@
       .jse-json-node.custom-class-boolean .jse-value {
         background: pink;
       }
+
+      .jse-main.jse-focus {
+        box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.24);
+      }
     </style>
   </head>
 
