chore: fix missing severity in custom validator example

--- a/tools/develop-vanilla.html
+++ b/tools/develop-vanilla.html
@@ -184,7 +184,8 @@
             return [
               {
                 path: ['object', 'a'],
-                message: '"a" should not be "b" ;)'
+                message: '"a" should not be "b" ;)',
+                severity: 'warning'
               }
             ]
           }
