--- a/tools/develop-vanilla.html
+++ b/tools/develop-vanilla.html
@@ -108,7 +108,7 @@
 
     <script type="module">
       import {
-        JSONEditor,
+        createJSONEditor,
         jsonQueryLanguage,
         lodashQueryLanguage,
         jmespathQueryLanguage
@@ -195,7 +195,7 @@
         },
         queryLanguages: [jsonQueryLanguage, lodashQueryLanguage, jmespathQueryLanguage]
       }
-      const testEditor = new JSONEditor({ target, props })
+      const testEditor = createJSONEditor({ target, props })
 
       window.testEditor = testEditor // expose to window for debugging
 
