chore: replace `$set` with `updateProps`

--- a/tools/develop-vanilla.html
+++ b/tools/develop-vanilla.html
@@ -350,7 +350,7 @@
       }
 
       document.getElementById('customClassNames').onclick = function (event) {
-        testEditor.$set({
+        testEditor.updateProps({
           onClassName: event.target.checked ? onClassName : undefined
         })
       }
